Use same font-size as plain textarea to avoid "jumping" text when switching editors

--- a/plugins/markmirror/skins/elastic/styles/markmirror.less
+++ b/plugins/markmirror/skins/elastic/styles/markmirror.less
@@ -42,6 +42,7 @@
 
     .cm-content {
         padding: 4px;
+        font-size: 13px;
     }
 
     .codemirror-toolbar {
